Prevent D. Key button from wrapping on Adv. Tools. (see #724)

--- a/gobotany/static/sass/_help.scss
+++ b/gobotany/static/sass/_help.scss
@@ -353,7 +353,7 @@ $image-box-shadow-color: rgba(0, 0, 0, 0.6);
             bottom: 10px;
             margin: 0 0 0 20px;
             position: absolute;
-            width: 224px;
+            width: 235px;
         }
     }
 }
